@@ -14,6 +14,7 @@
 #include "command.h"
 #include "mguests.h"
 #include "powers.h"
+#include "modules.h"
 
 #define IS_CLEAN(i) (isGarbage(i) && Going(i) && \
              ((i) >= 0) && ((i) < mudstate.db_top) && \
@@ -1732,6 +1733,9 @@ void do_dbck(dbref executor, dbref caller, dbref enactor, int key)
     purge_going();
     make_freelist();
     scheduler.Shrink();
+#if defined(HAVE_DLOPEN) || defined(WIN32)
+    mux_ModuleTick();
+#endif
 
     // Allow the local extensions to do data checks.
     //
